2003-08-06  Martin Willemoes Hansen <mwh@sysrq.dk>

	* sources/dia-sharp.sources: 
	* sources/makefile:
	* PROBLEMS:
	* README:
	* api/dia-api.xml: Target latest cvs version of diacanvas2
	* patches/*.diff: Rearranged patches, a dir
	  for each software and version of it that
	  has been modified.
	* patches/dia-storage.h.diff: Fix for comments next to parameters.
	* patches/acinclude.m4.diff: Fix for not finding python 2.3
	* sources/Dia.Metadata: Fixed nameclashes

2003-07-31  Martin Willemoes Hansen <mwh@sysrq.dk>

	* Upgraded to latest gtk# cvs

2003-07-28  Martin Willemoes Hansen <mwh@sysrq.dk>

	* dia/CanvasBox.custom
	  dia/CanvasImage.custom  
	  dia/CanvasLine.custom: 
	  Method ItemCreate is inherited so no need to 
	  call CanvasItem.ItemCreate, just plain ItemCreate.
	* dia/CanvasText.custom: Added, default ctor
	* sources/Dia.metadata: Disabled default ctor for CanvasText
	* sample/sample.cs: Includes sample code to display CanvasText
	* sample/CanvasTextBox.cs: Added a custom CanvasItem

2003-07-26  Martin Willemoes Hansen <mwh@sysrq.dk>

	* dia/CanvasImage.custom: Changed public Ctor to use a pixmap parameter
	  now height and width are automagically set.
	* sample/sample.cs: Updated to reflect CanvasImage.custom changes

2003-07-23  Martin Willemoes Hansen <mwh@sysrq.dk>

	* dia/Point.custom: Added, convenience ctor
	  and ToString()
	* dia/CanvasLine.custom: Added, default ctor
	* dia/CanvasBox.custom: Added, default ctor
	* dia/CanvasImage.custom: Added, default ctor
	* dia/CanvasItem.custom: Removed method to create CanvasImage
	* sources/Dia.metadata: rule disable default constructor added
	* sample/sample.cs: Added section for programatically 
	  canvas item creation.
	
2003-07-22  Martin Willemoes Hansen <mwh@sysrq.dk>
	
	* PROBLEMS: Added
	* sources/Dia.metadata: Hide DiaExpression type, 
	  and hide the AddExpression method in DiaConstraint
	* doc/en/Dia/Expression.xml: Removed

2003-07-21  Martin Willemoes Hansen <mwh@sysrq.dk>
