@@ -82,6 +82,15 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkImageMenuItem" id="item1">
+		      <property name="visible">True</property>
+		      <property name="label">gtk-print</property>
+		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="Print" last_modification_time="Thu, 07 Aug 2003 07:28:37 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkMenuItem" id="separator2">
 		      <property name="visible">True</property>
 		    </widget>
