@@ -1,3 +1,8 @@
+2003-08-07  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* dia/PlacementTool.custom: Fixed Uni16 to Ansi conversion bug
+	* sample/sample.cs: Added start of printing sample, gnomeprint wrapper needed.
+
 2003-08-06  Martin Willemoes Hansen <mwh@sysrq.dk>
 
 	* sources/dia-sharp.sources: 
